fixed button styling and tools spacing

--- a/css/style.css
+++ b/css/style.css
@@ -299,8 +299,11 @@ main {
 }
 
 .show_more {
-  outline: none;
-  text-decoration: underline;
+  text-decoration-line: underline;
+  text-decoration-style: wavy;
+  text-decoration-thickness: 1.5px;
+  color: #00e1ff;
+  cursor: pointer;
   width: 30%;
 }
 
@@ -899,7 +902,7 @@ main {
 .works .project__container .project__content .tools-list {
   list-style: none;
   display: flex;
-  gap: 2.5rem;
+  gap: 1.5rem;
   color: #8892b0;
   font-family: "Fira Code", monospace;
   font-weight: 300;
