--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -72,7 +72,12 @@
   }
 }
 .show_more {
-  outline: none;
-  text-decoration: underline;
+  text-decoration-line: underline;
+  text-decoration-style: wavy;
+  text-decoration-thickness: 1.5px;
+  color: $color-1;
+  cursor: pointer;
+
+  //   text-decoration: underline;
   width: 30%;
 }
