--- a/sass/layout/__works.scss
+++ b/sass/layout/__works.scss
@@ -116,7 +116,7 @@
         &-list {
           list-style: none;
           display: flex;
-          gap: 2.5rem;
+          gap: 1.5rem;
           color: $slate-color-3;
           font-family: $font-secondary;
           font-weight: 300;
